Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn22.54:0.1": "Verbundene Lehrreden 22.54 ",
-  "sn22.54:0.2": "6. Das Kapitel über Einbindung "
+  "sn22.54:0.2": "6. Das Kapitel über Einbindung ",
+  "sn22.54:0.3": "Ein Same "
 }
