--- a/translation/de/sabbamitta/sutta/sn/sn9/sn9.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn9/sn9.1_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "sn9.1:2.3": "Als Mensch solltest du das Verlangen nach Menschen beseitigen. ",
   "sn9.1:2.4": "Dann wirst du glücklich und frei von Gier sein. ",
   "sn9.1:3.1": "Sei achtsam und gib Widerwillen auf; ",
-  "sn9.1:3.2": "lass dich von uns an der Weg der Guten erinnern. ",
+  "sn9.1:3.2": "lass dich von uns an den Weg der Guten erinnern. ",
   "sn9.1:3.3": "Der staubige Abgrund ist so schwer zu überqueren; ",
   "sn9.1:3.4": "lass dich nicht vom Staub der Sinne hinabziehen. ",
   "sn9.1:4.1": "Wie ein Vogel, der mit Schmutz bedeckt ist, ",
