--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.54:0.1": "Verbundene Lehrreden 22.54 ",
   "sn22.54:0.2": "6. Das Kapitel über Einbindung ",
   "sn22.54:0.3": "Ein Same ",
-  "sn22.54:1.1": "In Sāvatthī. "
+  "sn22.54:1.1": "In Sāvatthī. ",
+  "sn22.54:1.2": "„Mönche und Nonnen, es gibt fünf Arten der Vermehrung bei Pflanzen. "
 }
