--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn22.54:1.1": "In Sāvatthī. ",
   "sn22.54:1.2": "„Mönche und Nonnen, es gibt fünf Arten der Vermehrung bei Pflanzen. ",
   "sn22.54:1.3": "Welche fünf? ",
-  "sn22.54:1.4": "Vermehrung aus Wurzeln, aus Stängeln, aus Knoten oder aus Ablegern, und die Vermehrung aus Samen als Fünfte. "
+  "sn22.54:1.4": "Vermehrung aus Wurzeln, aus Stängeln, aus Knoten oder aus Ablegern, und die Vermehrung aus Samen als Fünfte. ",
+  "sn22.54:1.5": "Angenommen, diese fünf Dinge, aus denen sich Pflanzen vermehren, wären unversehrt, unbeschädigt, nicht von Wind und Sonne verdorben, fruchtbar und wohl verwahrt. Aber es gäbe kein Erdreich und kein Wasser. "
 }
