--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.54:1.5": "Angenommen, diese fünf Dinge, aus denen sich Pflanzen vermehren, wären unversehrt, unbeschädigt, nicht von Wind und Sonne verdorben, fruchtbar und wohl verwahrt. Aber es gäbe kein Erdreich und kein Wasser. ",
   "sn22.54:1.6": "Würden diese fünf Dinge, aus denen sich Pflanzen vermehren, wachsen, größer werden und zur Reife kommen?“ ",
   "sn22.54:1.7": "„Nein, Herr.“ ",
-  "sn22.54:1.8": "„Angenommen, diese fünf Dinge, aus denen sich Pflanzen vermehren, wären unversehrt, unbeschädigt, nicht von Wind und Sonne verdorben, fruchtbar und wohl verwahrt, und es gäbe Erdreich und Wasser. "
+  "sn22.54:1.8": "„Angenommen, diese fünf Dinge, aus denen sich Pflanzen vermehren, wären unversehrt, unbeschädigt, nicht von Wind und Sonne verdorben, fruchtbar und wohl verwahrt, und es gäbe Erdreich und Wasser. ",
+  "sn22.54:1.9": "Würden diese fünf Dinge, aus denen sich Pflanzen vermehren, wachsen, größer werden und zur Reife kommen?“ "
 }
