--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -215,5 +215,6 @@
   "mn9:64-66.7": "यहां आदरणीयो, दुःख का अज्ञान, दुःख के उदय का अज्ञान, दुःख के निरोध का अज्ञान, दुःख के निरोध की ओर ले जानेवाले मार्ग का अज्ञान—",
   "mn9:64-66.8": "इसे आदरणीयो, अविद्या कहा जाता है।",
   "mn9:64-66.9": "अशुद्धियों के उदय के साथ अविद्या का उदय होता है, अशुद्धियों के निरोध के साथ अविद्या का निरोध होता है, संस्कार के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—",
-  "mn9:64-66.10": "सम्यक् दृष्टि, सम्यक् संकल्प, सम्यक् वाणी, सम्यक् कार्य, सम्यक् आजीविका, सम्यक् उद्यम, सम्यक् स्मृति, सम्यक् समाधि।"
+  "mn9:64-66.10": "सम्यक् दृष्टि, सम्यक् संकल्प, सम्यक् वाणी, सम्यक् कार्य, सम्यक् आजीविका, सम्यक् उद्यम, सम्यक् स्मृति, सम्यक् समाधि।",
+  "mn9:67.1": "इस प्रकार, आदरणीयो, जब आर्यसाधक अविद्या को समझता है, अविद्या के उदय को समझता है, अविद्या के निरोध को समझता है, अविद्या के निरोध की ओर ले जानेवाले मार्ग को समझता है, तब वह संपूर्ण तौर पर लालसा की आंतरिक मनोवृत्ति का त्याग करता है, घृणा की आंतरिक मनोवृत्ति का त्याग करता है, ‘मैं हुं’ यह दृष्टि और अभिमान की आंतरिक मनोवृत्ति का विनाश करता है, और अज्ञान का त्याग कर के, ज्ञान का उदय कर के यहीं वर्तमान में दुःख का अंत करता है—"
 }
