Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
@@ -12,5 +12,5 @@
   "sn22.54:1.8": "„Angenommen, diese fünf Dinge, aus denen sich Pflanzen vermehren, wären unversehrt, unbeschädigt, nicht von Wind und Sonne verdorben, fruchtbar und wohl verwahrt, und es gäbe Erdreich und Wasser. ",
   "sn22.54:1.9": "Würden diese fünf Dinge, aus denen sich Pflanzen vermehren, wachsen, größer werden und zur Reife kommen?“ ",
   "sn22.54:1.10": "„Ja, Herr.“ ",
-  "sn22.54:1.11": "„Wie das Erdelement: So sollten  die vier Grundlagen, auf denen Bewusstsein besteht, betrachtet werden. "
+  "sn22.54:1.11": "„Wie das Erdelement: So sollen  die vier Grundlagen, auf denen Bewusstsein besteht, betrachtet werden. "
 }
