--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -224,5 +224,6 @@
   "mn9:69.2": "जब आर्यसाधक अशुद्धियों को समझता है, अशुद्धियों के उदय को समझता है, अशुद्धियों  के निरोध को समझता है, अशुद्धियों के निरोध की ओर ले जानेवाले मार्ग को समझता है—",
   "mn9:69.3": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।",
   "mn9:70.1": "आदरणीयो, अशुद्धियां क्या है, अशुद्धियों का उदय क्या है, अशुद्धियों का निरोध क्या है, अशुद्धियों के निरोध की ओर ले जानेवाला मार्ग क्या है?",
-  "mn9:70.2": "आदरणीयो, तीन प्रकार की अशुद्धियां होती हैं—"
+  "mn9:70.2": "आदरणीयो, तीन प्रकार की अशुद्धियां होती हैं—",
+  "mn9:70.3": "कामभोग की अशुद्धि, अस्तित्व की अशुद्धि, अविद्या की अशुद्धि।"
 }
