--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -226,5 +226,6 @@
   "mn9:70.1": "आदरणीयो, अशुद्धियां क्या है, अशुद्धियों का उदय क्या है, अशुद्धियों का निरोध क्या है, अशुद्धियों के निरोध की ओर ले जानेवाला मार्ग क्या है?",
   "mn9:70.2": "आदरणीयो, तीन प्रकार की अशुद्धियां होती हैं—",
   "mn9:70.3": "कामभोग की अशुद्धि, अस्तित्व की अशुद्धि, अविद्या की अशुद्धि।",
-  "mn9:70.4": "अविद्या के उदय के साथ अशुद्धियों का उदय होता है, अविद्या के निरोध के साथ अशुद्धियों का निरोध होता है, अशुद्धियों के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—"
+  "mn9:70.4": "अविद्या के उदय के साथ अशुद्धियों का उदय होता है, अविद्या के निरोध के साथ अशुद्धियों का निरोध होता है, अशुद्धियों के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—",
+  "mn9:70.5": "सम्यक् दृष्टि, सम्यक् संकल्प, सम्यक् वाणी, सम्यक् कार्य, सम्यक् आजीविका, सम्यक् उद्यम, सम्यक् स्मृति, सम्यक् समाधि।"
 }
