--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.54:1.9": "Würden diese fünf Dinge, aus denen sich Pflanzen vermehren, wachsen, größer werden und zur Reife kommen?“ ",
   "sn22.54:1.10": "„Ja, Herr.“ ",
   "sn22.54:1.11": "„Wie das Erdelement: So sollen  die vier Grundlagen, auf denen Bewusstsein besteht, betrachtet werden. ",
-  "sn22.54:1.12": "Wie das Wasserelement: So sollen Genießen und Gier betrachtet werden. "
+  "sn22.54:1.12": "Wie das Wasserelement: So sollen Genießen und Gier betrachtet werden. ",
+  "sn22.54:1.13": "Wie die fünf Dinge, aus denen sich Pflanzen vermehren: So soll das Bewusstsein mit seiner Nahrung betrachtet werden. "
 }
