--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn22.54:1.12": "Wie das Wasserelement: So sollen Genießen und Gier betrachtet werden. ",
   "sn22.54:1.13": "Wie die fünf Dinge, aus denen sich Pflanzen vermehren: So soll das Bewusstsein mit seiner Nahrung betrachtet werden. ",
   "sn22.54:2.1": "Solange Bewusstsein besteht, besteht es eingebunden in Form, getragen von Form, gegründet auf Form. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
-  "sn22.54:2.2": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Gefühl … "
+  "sn22.54:2.2": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Gefühl … ",
+  "sn22.54:2.3": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Wahrnehmung … "
 }
