--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn22.54:2.1": "Solange Bewusstsein besteht, besteht es eingebunden in Form, getragen von Form, gegründet auf Form. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
   "sn22.54:2.2": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Gefühl … ",
   "sn22.54:2.3": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Wahrnehmung … ",
-  "sn22.54:2.4": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Entscheidungen, getragen von Entscheidungen, gegründet auf Entscheidungen. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. "
+  "sn22.54:2.4": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Entscheidungen, getragen von Entscheidungen, gegründet auf Entscheidungen. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
+  "sn22.54:3.1": "Mönche und Nonnen, angenommen, da würde jemand sagen: "
 }
