Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn22.54:2.2": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Gefühl … ",
   "sn22.54:2.3": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Wahrnehmung … ",
   "sn22.54:2.4": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Entscheidungen, getragen von Entscheidungen, gegründet auf Entscheidungen. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
-  "sn22.54:3.1": "Mönche und Nonnen, angenommen, da würde jemand sagen: "
+  "sn22.54:3.1": "Mönche und Nonnen, angenommen, da würde jemand sagen: ",
+  "sn22.54:3.2": "‚Ich will außerhalb von Form, Gefühl, Wahrnehmung und Entscheidungen das Kommen und Gehen von Bewusstsein beschreiben, sein Sterben und Wiedererscheinen, sein Wachsen, Größerwerden und Zur-Reife-Kommen.‘ Das ist nicht möglich. "
 }
