--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn22.54:3.1": "Mönche und Nonnen, angenommen, da würde jemand sagen: ",
   "sn22.54:3.2": "‚Ich will außerhalb von Form, Gefühl, Wahrnehmung und Entscheidungen das Kommen und Gehen von Bewusstsein beschreiben, sein Sterben und Wiedererscheinen, sein Wachsen, Größerwerden und Zur-Reife-Kommen.‘ Das ist nicht möglich. ",
   "sn22.54:4.1": "Wenn ein Mönch Gier nach dem Element der Form aufgegeben hat, ",
-  "sn22.54:4.2": "ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. "
+  "sn22.54:4.2": "ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. ",
+  "sn22.54:4.3": "Wenn ein Mönch Gier nach dem Element des Gefühls aufgegeben hat … "
 }
