--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.54_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn22.54:4.4": "Wenn ein Mönch Gier nach dem Element der Wahrnehmung aufgegeben hat … ",
   "sn22.54:4.5": "Wenn ein Mönch Gier nach dem Element der Entscheidungen aufgegeben hat … ",
   "sn22.54:4.6": "Wenn ein Mönch Gier nach dem Element des Bewusstseins aufgegeben hat, ",
-  "sn22.54:4.7": "ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. "
+  "sn22.54:4.7": "ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. ",
+  "sn22.54:4.8": "Da dieses Bewusstsein nicht verankert wird und nicht wächst, ohne die Kraft, erneut zu entstehen, ist es befreit. "
 }
