Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -662,7 +662,7 @@
   "sn-name:661.sn22-upayavagga": "Das Kapitel über Einbindung ",
   "sn-name:662.sn22.53": "Einbindung ",
   "sn-name:663.sn22.54": "Ein Same ",
-  "sn-name:664.sn22.55": "Tief empfundene Sprüche ",
+  "sn-name:664.sn22.55": "Ein inniger Spruch ",
   "sn-name:668.sn22.59": "Kennzeichen des Nicht-selbst ",
   "sn-name:671.sn22.62": "Der Geltungsbereich der Sprache ",
   "sn-name:672.sn22-arahantavagga": "Das Kapitel über die Vollendeten ",
