--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.55:0.1": "Verbundene Lehrreden 22.55 ",
   "sn22.55:0.2": "6. Das Kapitel über Einbindung ",
   "sn22.55:0.3": "Ein inniger Spruch ",
-  "sn22.55:1.1": "In Sāvatthī. "
+  "sn22.55:1.1": "In Sāvatthī. ",
+  "sn22.55:1.2": "Da drückte der Buddha dieses innige Gefühl aus: "
 }
