Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.8_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.8_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "ud7.8:3.1": "Und da er diese Sache verstand, drückte der Buddha bei dieser Gelegenheit dieses innige Gefühl aus: ",
   "ud7.8:4.1": "„Seine Achtsamkeit mag stets ",
   "ud7.8:4.2": "im Körper verankert sein, beständig: ",
-  "ud7.8:4.3": "‚Es ist vielleicht nicht, und es ist vielleicht nicht mein. ",
+  "ud7.8:4.3": "‚Es könnte nicht sein, und es könnte nicht mein sein. ",
   "ud7.8:4.4": "Es wird nicht sein, und es wird nicht mein sein.‘ ",
   "ud7.8:4.5": "Indem er Schritt für Schritt darüber meditierte, ",
   "ud7.8:4.6": "würde er beizeiten das Klammern überqueren.“ "
