Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
@@ -102,7 +102,7 @@
   "an10.29:18.3": "Aber selbst die Lebewesen, die diese Wahrnehmung haben, verfallen und gehen zugrunde. ",
   "an10.29:18.4": "Wenn er das sieht, wird ein gebildeter edler Schüler davon ernüchtert. ",
   "an10.29:18.5": "Seine Leidenschaft selbst für das Vorderste schwindet, und die für Geringeres erst recht. ",
-  "an10.29:19.1": "Die vorderste unter den Überzeugungen Außenstehender ist: ‚Es ist vielleicht nicht, und es ist vielleicht nicht mein. Es wird nicht sein, und es wird nicht mein sein.‘ ",
+  "an10.29:19.1": "Die vorderste unter den Überzeugungen Außenstehender ist: ‚Ich könnte nicht sein, und es könnte nicht mein sein. Ich werde nicht sein, und es wird nicht mein sein.‘ ",
   "an10.29:19.2": "Wenn jemand diese Ansicht hat, kann man erwarten, ",
   "an10.29:19.3": "dass er von fortgesetztem Dasein abgestoßen ist ",
   "an10.29:19.4": "und vom Aufhören des fortgesetzten Daseins nicht abgestoßen ist. ",
