--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.55:0.2": "6. Das Kapitel über Einbindung ",
   "sn22.55:0.3": "Ein inniger Spruch ",
   "sn22.55:1.1": "In Sāvatthī. ",
-  "sn22.55:1.2": "Da drückte der Buddha dieses innige Gefühl aus: "
+  "sn22.55:1.2": "Da drückte der Buddha dieses innige Gefühl aus: ",
+  "sn22.55:1.3": "„‚Es könnte nicht sein, und es könnte nicht mein sein. Es wird nicht sein, und es wird nicht mein sein.‘ "
 }
