Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -1,4 +1,5 @@
 {
   "mn3:0.1": "મજ્જ઼િમ નિકાય ૩",
-  "mn3:0.2": "ધર્મ વારસદાર સૂત્ર"
+  "mn3:0.2": "ધર્મ વારસદાર સૂત્ર",
+  "mn3:1.1": "એવું મેં સાંભળ્યું—"
 }
