Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -3,5 +3,6 @@
   "mn3:0.2": "ધર્મ વારસદાર સૂત્ર",
   "mn3:1.1": "એવું મેં સાંભળ્યું—",
   "mn3:1.2": "એક વખત ભગવંત શ્રાવસ્તિની પાસે અનાથપિંડિકાના જેતવનમાં વિહા૨ કરી રહ્યા હતા.",
-  "mn3:1.3": "ત્યાં ભગવન્તે ભિક્ષુઓને સંબોધિને કહ્યું:"
+  "mn3:1.3": "ત્યાં ભગવન્તે ભિક્ષુઓને સંબોધિને કહ્યું:",
+  "mn3:1.4": "“ભિક્ષુઓ!”"
 }
