--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -5,5 +5,6 @@
   "mn3:1.2": "એક વખત ભગવંત શ્રાવસ્તિની પાસે અનાથપિંડિકાના જેતવનમાં વિહા૨ કરી રહ્યા હતા.",
   "mn3:1.3": "ત્યાં ભગવન્તે ભિક્ષુઓને સંબોધિને કહ્યું:",
   "mn3:1.4": "“ભિક્ષુઓ!”",
-  "mn3:1.5": "“ભદન્ત!”, ભિક્ષુઓએ જવાબ આપ્યો."
+  "mn3:1.5": "“ભદન્ત!”, ભિક્ષુઓએ જવાબ આપ્યો.",
+  "mn3:1.6": "ભગવન્તે એવું કહ્યું: "
 }
