--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -6,5 +6,6 @@
   "mn3:1.3": "ત્યાં ભગવન્તે ભિક્ષુઓને સંબોધિને કહ્યું:",
   "mn3:1.4": "“ભિક્ષુઓ!”",
   "mn3:1.5": "“ભદન્ત!”, ભિક્ષુઓએ જવાબ આપ્યો.",
-  "mn3:1.6": "ભગવન્તે એવું કહ્યું: "
+  "mn3:1.6": "ભગવન્તે એવું કહ્યું: ",
+  "mn3:2.1": "“ભિક્ષુઓ, ધર્મ માં મારા વારસહાર બનો, મિલ્કત માં નહીં."
 }
