Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.155_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.155_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.155_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "an3.155:4.4": "Sie bringen gute Gaben denen, die der geistlichen Übung folgen. ",
   "an3.155:5.1": "Würdige Taten mit dem Körper, ",
   "an3.155:5.2": "Worte, die würdig sind, ",
-  "an3.155:5.3": "ehrbare Taten im Geist, ",
+  "an3.155:5.3": "würdige Taten im Geist, ",
   "an3.155:5.4": "ehrbare Entschlüsse: ",
   "an3.155:5.5": "Auf ehrbare Taten ",
   "an3.155:5.6": "folgt ehrbarer Ertrag. ",
