--- a/translation/de/sabbamitta/sutta/an/an3/an3.155_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.155_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "an3.155:5.3": "würdige Taten im Geist, ",
   "an3.155:5.4": "würdige Entschlüsse: ",
   "an3.155:5.5": "Auf würdige Taten ",
-  "an3.155:5.6": "folgt ehrbarer Ertrag. ",
+  "an3.155:5.6": "folgt würdiger Ertrag. ",
   "an3.155:6.1": "Wer mit diesem Ertrag glücklich ist, ",
   "an3.155:6.2": "gedeiht in der Lehre des Buddha. ",
   "an3.155:6.3": "Dass ihr und alle Verwandten ",
