--- a/translation/de/sabbamitta/sutta/an/an6/an6.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.41_translation-de-sabbamitta.json
@@ -17,5 +17,5 @@
   "an6.41:2.7": "dass er nichts als anziehend sein soll … ",
   "an6.41:2.8": "oder dass er nichts als unattraktiv sein soll. ",
   "an6.41:2.9": "Und warum? ",
-  "an6.41:2.10": "Weil das Element des Unattraktiven in diesem Baumstamm vorhanden ist. Eine Nonne, die Wunderkräfte besitzt, könnte sich darauf stützen und den Entschluss fassen, dass er nichts als unattraktiv sein soll.“ "
+  "an6.41:2.10": "Weil das Element des Unattraktiven in diesem Baumstamm vorhanden ist. Eine Nonne, die Wunderkräfte besitzt, könnte sich darauf stützen und bestimmen, dass er nichts als unattraktiv sein soll.“ "
 }
