--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.55:0.3": "Ein inniger Spruch ",
   "sn22.55:1.1": "In Sāvatthī. ",
   "sn22.55:1.2": "Da drückte der Buddha dieses innige Gefühl aus: ",
-  "sn22.55:1.3": "„‚Es könnte nicht sein, und es könnte nicht mein sein. Es wird nicht sein, und es wird nicht mein sein.‘ "
+  "sn22.55:1.3": "„‚Es könnte nicht sein, und es könnte nicht mein sein. Es wird nicht sein, und es wird nicht mein sein.‘ ",
+  "sn22.55:1.4": "Ein Mönch, der sich dieses fest vornimmt, kann die fünf niederen Fesseln durchtrennen.“ "
 }
