--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn22.55:1.3": "„‚Es könnte nicht sein, und es könnte nicht mein sein. Es wird nicht sein, und es wird nicht mein sein.‘ ",
   "sn22.55:1.4": "Ein Mönch, der sich dieses fest vornimmt, kann die fünf niederen Fesseln durchtrennen.“ ",
   "sn22.55:1.5": "Daraufhin sagte einer der Mönche zum Buddha: ",
-  "sn22.55:1.6": "„Aber wie, Herr, "
+  "sn22.55:1.6": "„Aber wie, Herr, ",
+  "sn22.55:1.7": "kann ein Mönch, der sich dieses fest vornimmt, die fünf niederen Fesseln durchtrennen?“ "
 }
