Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.55:1.4": "Ein Mönch, der sich dieses fest vornimmt, kann die fünf niederen Fesseln durchtrennen.“ ",
   "sn22.55:1.5": "Daraufhin sagte einer der Mönche zum Buddha: ",
   "sn22.55:1.6": "„Aber wie, Herr, ",
-  "sn22.55:1.7": "kann ein Mönch, der sich dieses fest vornimmt, die fünf niederen Fesseln durchtrennen?“ "
+  "sn22.55:1.7": "kann ein Mönch, der sich dieses fest vornimmt, die fünf niederen Fesseln durchtrennen?“ ",
+  "sn22.55:2.1": "„Mönch, da hat ein ungebildeter gewöhnlicher Mensch die Edlen nicht gesehen und ist in der Lehre der Edlen nicht bewandert und geübt. Er hat keine guten Menschen gesehen und ist in der Lehre der Guten nicht bewandert und geübt. "
 }
