--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.55:2.2": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "sn22.55:2.3": "Er betrachtet Gefühl als das Selbst … ",
   "sn22.55:2.4": "Er betrachtet Wahrnehmung als das Selbst … ",
-  "sn22.55:2.5": "Er betrachtet Entscheidungen als das Selbst … "
+  "sn22.55:2.5": "Er betrachtet Entscheidungen als das Selbst … ",
+  "sn22.55:2.6": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
 }
