--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn22.55:2.4": "Er betrachtet Wahrnehmung als das Selbst … ",
   "sn22.55:2.5": "Er betrachtet Entscheidungen als das Selbst … ",
   "sn22.55:2.6": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
-  "sn22.55:3.1": "Er versteht Form, die unbeständig ist, nicht wahrhaftig als unbeständig. "
+  "sn22.55:3.1": "Er versteht Form, die unbeständig ist, nicht wahrhaftig als unbeständig. ",
+  "sn22.55:3.2": "Er versteht Gefühl, das unbeständig ist, nicht wahrhaftig als unbeständig. "
 }
