Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn22.55:3.1": "Er versteht Form, die unbeständig ist, nicht wahrhaftig als unbeständig. ",
   "sn22.55:3.2": "Er versteht Gefühl, das unbeständig ist, nicht wahrhaftig als unbeständig. ",
   "sn22.55:3.3": "Er versteht Wahrnehmung, die unbeständig ist, nicht wahrhaftig als unbeständig. ",
-  "sn22.55:3.4": "Er versteht Entscheidungen, die unbeständig sind, nicht wahrhaftig als unbeständig. "
+  "sn22.55:3.4": "Er versteht Entscheidungen, die unbeständig sind, nicht wahrhaftig als unbeständig. ",
+  "sn22.55:3.5": "Er versteht Bewusstsein, das unbeständig ist, nicht wahrhaftig als unbeständig. "
 }
