--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn22.55:4.3": "Er versteht Wahrnehmung, die Leiden ist, nicht wahrhaftig als Leiden. ",
   "sn22.55:4.4": "Er versteht Entscheidungen, die Leiden sind, nicht wahrhaftig als Leiden. ",
   "sn22.55:4.5": "Er versteht Bewusstsein, das Leiden ist, nicht wahrhaftig als Leiden. ",
-  "sn22.55:5.1": "Er versteht Form, die nicht-selbst ist, nicht wahrhaftig als nicht-selbst. "
+  "sn22.55:5.1": "Er versteht Form, die nicht-selbst ist, nicht wahrhaftig als nicht-selbst. ",
+  "sn22.55:5.2": "Er versteht Gefühl, das nicht-selbst ist, nicht wahrhaftig als nicht-selbst. "
 }
