--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn22.55:5.5": "Er versteht Bewusstsein, das nicht-selbst ist, nicht wahrhaftig als nicht-selbst. ",
   "sn22.55:6.1": "Er versteht Form, die bedingt ist, nicht wahrhaftig als bedingt. ",
   "sn22.55:6.2": "Er versteht Gefühl … ",
-  "sn22.55:6.3": "Er versteht Wahrnehmung … "
+  "sn22.55:6.3": "Er versteht Wahrnehmung … ",
+  "sn22.55:6.4": "Er versteht Entscheidungen … "
 }
