--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "sn22.55:6.2": "Er versteht Gefühl … ",
   "sn22.55:6.3": "Er versteht Wahrnehmung … ",
   "sn22.55:6.4": "Er versteht Entscheidungen … ",
-  "sn22.55:6.5": "Er versteht Bewusstsein, das bedingt ist, nicht wahrhaftig als bedingt. "
+  "sn22.55:6.5": "Er versteht Bewusstsein, das bedingt ist, nicht wahrhaftig als bedingt. ",
+  "sn22.55:6.6": "Er versteht nicht wahrhaftig, dass Form verschwinden wird. "
 }
