--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "sn22.55:6.4": "Er versteht Entscheidungen … ",
   "sn22.55:6.5": "Er versteht Bewusstsein, das bedingt ist, nicht wahrhaftig als bedingt. ",
   "sn22.55:6.6": "Er versteht nicht wahrhaftig, dass Form verschwinden wird. ",
-  "sn22.55:6.7": "Er versteht nicht wahrhaftig, dass Gefühl … "
+  "sn22.55:6.7": "Er versteht nicht wahrhaftig, dass Gefühl … ",
+  "sn22.55:6.8": "Er versteht nicht wahrhaftig, dass Wahrnehmung … "
 }
