--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn22.55:6.6": "Er versteht nicht wahrhaftig, dass Form verschwinden wird. ",
   "sn22.55:6.7": "Er versteht nicht wahrhaftig, dass Gefühl … ",
   "sn22.55:6.8": "dass Wahrnehmung … ",
-  "sn22.55:6.9": "dass Entscheidungen … "
+  "sn22.55:6.9": "dass Entscheidungen … ",
+  "sn22.55:6.10": "dass Bewusstsein verschwinden wird. "
 }
