--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -43,5 +43,6 @@
   "sn22.55:7.1": "Aber ein gebildeter edler Schüler hat die Edlen gesehen und ist in der Lehre der Edlen bewandert und geübt. Er hat gute Menschen gesehen und ist in der Lehre der Guten bewandert und geübt. ",
   "sn22.55:7.2": "Er betrachtet nicht Form als das Selbst … ",
   "sn22.55:7.3": "Er betrachtet nicht Gefühl als das Selbst … ",
-  "sn22.55:7.4": "Er betrachtet nicht Wahrnehmung als das Selbst … "
+  "sn22.55:7.4": "Er betrachtet nicht Wahrnehmung als das Selbst … ",
+  "sn22.55:7.5": "Er betrachtet nicht Entscheidungen als das Selbst … "
 }
