--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn22.55:7.2": "Er betrachtet nicht Form als das Selbst … ",
   "sn22.55:7.3": "Er betrachtet nicht Gefühl als das Selbst … ",
   "sn22.55:7.4": "Er betrachtet nicht Wahrnehmung als das Selbst … ",
-  "sn22.55:7.5": "Er betrachtet nicht Entscheidungen als das Selbst … "
+  "sn22.55:7.5": "Er betrachtet nicht Entscheidungen als das Selbst … ",
+  "sn22.55:7.6": "Er betrachtet nicht Bewusstsein als das Selbst. "
 }
