--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.55:7.5": "Er betrachtet nicht Entscheidungen als das Selbst … ",
   "sn22.55:7.6": "Er betrachtet nicht Bewusstsein als das Selbst. ",
   "sn22.55:8.1": "Er versteht Form, die unbeständig ist, wahrhaftig als unbeständig. ",
-  "sn22.55:8.2": "Er versteht Gefühl … "
+  "sn22.55:8.2": "Er versteht Gefühl … ",
+  "sn22.55:8.3": "Er versteht Wahrnehmung … "
 }
