--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -48,5 +48,6 @@
   "sn22.55:7.6": "Er betrachtet nicht Bewusstsein als das Selbst. ",
   "sn22.55:8.1": "Er versteht Form, die unbeständig ist, wahrhaftig als unbeständig. ",
   "sn22.55:8.2": "Er versteht Gefühl … ",
-  "sn22.55:8.3": "Er versteht Wahrnehmung … "
+  "sn22.55:8.3": "Er versteht Wahrnehmung … ",
+  "sn22.55:8.4": "Er versteht Entscheidungen … "
 }
