Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -55,5 +55,6 @@
   "sn22.55:8.7": "Er versteht Form … Gefühl … Wahrnehmung … Entscheidungen … Bewusstsein, die alle nicht-selbst sind, wahrhaftig als nicht-selbst. ",
   "sn22.55:8.8": "Er versteht Form … Gefühl … Wahrnehmung … Entscheidungen … Bewusstsein, die alle bedingt sind, wahrhaftig als bedingt. ",
   "sn22.55:8.9": "Er versteht wahrhaftig, dass Form verschwinden wird. ",
-  "sn22.55:8.10": "Er versteht wahrhaftig, dass Gefühl … "
+  "sn22.55:8.10": "Er versteht wahrhaftig, dass Gefühl … ",
+  "sn22.55:8.11": "dass Wahrnehmung … "
 }
