Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "sn22.55:8.8": "Er versteht Form … Gefühl … Wahrnehmung … Entscheidungen … Bewusstsein, die alle bedingt sind, wahrhaftig als bedingt. ",
   "sn22.55:8.9": "Er versteht wahrhaftig, dass Form verschwinden wird. ",
   "sn22.55:8.10": "Er versteht wahrhaftig, dass Gefühl … ",
-  "sn22.55:8.11": "dass Wahrnehmung … "
+  "sn22.55:8.11": "dass Wahrnehmung … ",
+  "sn22.55:8.12": "dass Entscheidungen … "
 }
