Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -8,5 +8,6 @@
   "mn3:1.5": "“ભદન્ત!”, ભિક્ષુઓએ જવાબ આપ્યો.",
   "mn3:1.6": "ભગવન્તે એવું કહ્યું: ",
   "mn3:2.1": "“ભિક્ષુઓ, ધર્મમાં મારા વારસહાર બનો, માલમિલ્કતમાં નહીં.",
-  "mn3:2.2": "મારામાં તમારા માટે એવી અનુકંપા છે:"
+  "mn3:2.2": "મારામાં તમારા માટે એવી અનુકંપા છે:",
+  "mn3:2.3": "‘કઇ રીતે સાધકો ધર્મમાં મારા વારસદાર બને, માલમિલ્કતમાં નહીં’."
 }
