Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -60,5 +60,6 @@
   "sn22.55:8.12": "dass Entscheidungen … ",
   "sn22.55:8.13": "dass Bewusstsein verschwinden wird. ",
   "sn22.55:9.1": "‚Es könnte nicht sein, und es könnte nicht mein sein. Es wird nicht sein, und es wird nicht mein sein‘ – ",
-  "sn22.55:9.2": "weil Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein verschwinden werden, "
+  "sn22.55:9.2": "weil Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein verschwinden werden, ",
+  "sn22.55:9.3": "deshalb kann ein Mönch, der sich dieses fest vornimmt, die fünf niederen Fesseln durchtrennen.“ "
 }
