Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an5/an5.168_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an5/an5.168_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.168_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "an5.168:1.8": "Ebenso hat ein unmoralischer Mensch, jemand ohne sittliches Verhalten, eine wesentliche Bedingung für rechte Versenkung zerstört. ",
   "an5.168:1.9": "Wenn es keine rechte Versenkung gibt, hat jemand ohne rechte Versenkung eine wesentliche Bedingung für wirkliches Erkennen und Sehen zerstört. ",
   "an5.168:1.10": "Wenn es kein wirkliches Erkennen und Sehen gibt, hat jemand ohne wirkliches Erkennen und Sehen eine wesentliche Bedingung für Ernüchterung und Schwinden der Leidenschaft zerstört. ",
-  "an5.168:1.11": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Wissen und Sehen der Freiheit zerstört. ",
+  "an5.168:1.11": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit zerstört. ",
   "an5.168:2.1": "Ein sittlicher Mensch, der das sittliche Verhalten vervollkommnet hat, hat eine wesentliche Bedingung für rechte Versenkung erfüllt. ",
   "an5.168:2.2": "Wenn es rechte Versenkung gibt, hat jemand, der rechte Versenkung vervollkommnet hat, eine wesentliche Bedingung für wirkliches Erkennen und Sehen erfüllt. ",
   "an5.168:2.3": "Wenn es wirkliches Erkennen und Sehen gibt, hat jemand, der wirkliches Erkennen und Sehen vervollkommnet hat, eine wesentliche Bedingung für Ernüchterung und Schwinden der Leidenschaft erfüllt. ",
