Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.1_translation-de-sabbamitta.json
@@ -31,6 +31,6 @@
   "an10.1:11.6": "Der Zweck und die vorteilhafte Folge der Seligkeit ist Versenkung. ",
   "an10.1:11.7": "Der Zweck und die vorteilhafte Folge der Versenkung ist wahrhaftiges Erkennen und Sehen. ",
   "an10.1:11.8": "Der Zweck und die vorteilhafte Folge von wahrhaftigem Erkennen und Sehen sind Ernüchterung und Schwinden der Leidenschaft. ",
-  "an10.1:11.9": "Und der Zweck und die vorteilhafte Folge von Ernüchterung und Schwinden der Leidenschaft ist das Wissen und Sehen der Freiheit. ",
+  "an10.1:11.9": "Und der Zweck und die vorteilhafte Folge von Ernüchterung und Schwinden der Leidenschaft ist das Erkennen und Sehen der Freiheit. ",
   "an10.1:11.10": "So, Ānanda, führt taugliche Sittlichkeit schrittweise zum Höchsten.“ "
 }
