Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
@@ -220,7 +220,7 @@
   "dn34:1.6.99": "Das ist die fünfte günstige Gelegenheit zur Befreiung. ",
   "dn34:1.6.101": "Welche fünf Dinge müssen verwirklicht werden? ",
   "dn34:1.6.102": "Fünffacher Umfang der Lehre: ",
-  "dn34:1.6.103": "der Umfang des sittlichen Verhaltens, der Umfang der Versenkung, der Umfang der Weisheit, der Umfang der Freiheit und der Umfang des Wissens und Sehens der Freiheit. ",
+  "dn34:1.6.103": "der Umfang des sittlichen Verhaltens, der Umfang der Versenkung, der Umfang der Weisheit, der Umfang der Freiheit und der Umfang des Erkennens und Sehens der Freiheit. ",
   "dn34:1.6.105": "Daher sind diese fünfzig Dinge wahr, wirklich, zutreffend, nicht unwirklich, nicht anders, und der Klargewordene ist richtig zu ihnen erwacht. ",
   "dn34:1.7.0": "6. Sechsergruppen ",
   "dn34:1.7.1": "Sechs Dinge sind eine große Hilfe usw. ",
