Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "dn33:1.8.1": "Welches sind die einzeln angeordneten Lehren? ",
   "dn33:1.8.2": "‚Alle Lebewesen werden von Nahrung erhalten.‘ ",
   "dn33:1.8.3": "‚Alle Lebewesen werden von Bedingungen erhalten.‘ ",
-  "dn33:1.8.4": "Das sind die einzeln angeordneten Lehren, die vom Gesegneten richtig erklärt wurden, ihm, der weiß und sieht, dem Vollendeten, dem vollkommen erwachten Buddha. ",
+  "dn33:1.8.4": "Das sind die einzeln angeordneten Lehren, die vom Gesegneten richtig erklärt wurden, ihm, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha. ",
   "dn33:1.8.5": "Ihr solltet sie alle im Chor aufsagen, ohne zu streiten, sodass dieser spirituelle Pfad lange Zeit bestehen bleibt – zum Nutzen und Glück vieler Menschen, aus Anteilnahme für die Welt, zum Vorteil, Nutzen und Glück von Göttern und Menschen. ",
   "dn33:1.9.0": "2. Zweier ",
   "dn33:1.9.1": "Da sind zu Zweiergruppen zusammengestellte Lehren, die vom Buddha richtig erklärt wurden. ",
