Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.29_translation-de-sabbamitta.json
@@ -69,7 +69,7 @@
   "an10.29:13.1": "Während man keine Form innerlich wahrnimmt, sieht man äußere Bilder, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
   "an10.29:13.2": "Wie der Morgenstern, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. Oder wie Stoff aus Bāraṇasī, auf beiden Seiten satiniert, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
   "an10.29:13.3": "Ebenso sieht man, während man keine Form innerlich wahrnimmt, äußere Bilder, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
-  "an10.29:13.4": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich weiß und sehe.‘ ",
+  "an10.29:13.4": "Wenn man das gemeistert hat, ist man sich klar: ‚Ich erkenne und sehe.‘ ",
   "an10.29:13.5": "Das ist die achte Dimension der Meisterschaft. ",
   "an10.29:13.6": "Das sind die acht Dimensionen der Meisterschaft. ",
   "an10.29:14.1": "Die vorderste dieser acht Dimensionen der Meisterschaft ist, wenn jemand, während er keine Form innerlich wahrnimmt, äußere Bilder sieht, weiß, von weißer Farbe, in weißer Schattierung, weißem Ton. ",
