Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn6_translation-de-sabbamitta.json
@@ -128,7 +128,7 @@
   "dn6:17.4": "Wenn ein Mönch so erkennt und sieht, wäre es da angebracht, von ihm zu sagen: ",
   "dn6:17.5": "„Seele und Körper sind dasselbe“ oder „Seele und Körper sind verschiedene Dinge“?‘ ",
   "dn6:17.6": "‚Das wäre es, werter Freund.‘ ",
-  "dn6:17.8": "‚Aber, werte Freunde, ich weiß und sehe so. ",
+  "dn6:17.8": "‚Aber, werte Freunde, ich erkenne und sehe so. ",
   "dn6:17.9": "Dennoch sage ich nicht: ",
   "dn6:17.10": "„Seele und Körper sind dasselbe“ oder „Seele und Körper sind verschiedene Dinge“. … ",
   "dn6:18.1": "Er lenkt und richtet seinen Geist auf das Erkennen und Sehen … ",
