Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an9/an9.38_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an9/an9.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an9/an9.38_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "an9.38:2.5": "Auch Nāṭaputta, der Anführer der Jainas, behauptet, allwissend und all-sehend zu sein und alles ohne Ausnahme zu erkennen und zu sehen, und zwar so: ",
   "an9.38:2.6": "‚Erkennen und Sehen sind mir ständig und fortwährend gegenwärtig, ob ich gehe, stehe, schlafe oder wache.‘ ",
   "an9.38:2.7": "Er sagt: ",
-  "an9.38:2.8": "‚Ich weiß und sehe mit unendlichem Wissen, dass die Welt endlich ist.‘ ",
+  "an9.38:2.8": "‚Ich erkenne und sehe mit unendlichem Wissen, dass die Welt endlich ist.‘ ",
   "an9.38:2.9": "Beide behaupten, aus ihrem Wissen heraus zu sprechen, aber sie widersprechen einander direkt. Welcher von ihnen spricht die Wahrheit und welcher die Unwahrheit?“ ",
   "an9.38:3.1": "„Genug, Brahmanen. ",
   "an9.38:3.2": "Lasst es damit gut sein: ",
