Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an11/an11.16_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an11/an11.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.16_translation-de-sabbamitta.json
@@ -27,7 +27,7 @@
   "an11.16:5.6": "Sie versteht: ‚Aber was durch Entscheidungen und Absichten zustande kommt, ist unbeständig und muss aufhören.‘ ",
   "an11.16:5.7": "Indem sie darin verweilt, erreicht sie die Auflösung der Befleckungen. ",
   "an11.16:5.8": "Wenn sie nicht die Auflösung der Befleckungen erreicht, wird sie mit dem Auflösen der fünf niederen Fesseln aufgrund ihrer Leidenschaft und Liebe zu dieser Meditation durch unmittelbares Erscheinen wiedergeboren. Sie erlischt dort und muss von jener Welt nicht zurückkehren. ",
-  "an11.16:5.9": "Auch das ist ein Ding, das vom Gesegneten, der weiß und sieht, dem Vollendeten, dem vollkommen erwachten Buddha richtig erklärt wurde, sodass der Geist eines beflissenen, eifrigen und entschlossenen Mönchs, wenn er es übt, befreit wird und er die unübertreffliche Geborgenheit erreicht. ",
+  "an11.16:5.9": "Auch das ist ein Ding, das vom Gesegneten, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha richtig erklärt wurde, sodass der Geist eines beflissenen, eifrigen und entschlossenen Mönchs, wenn er es übt, befreit wird und er die unübertreffliche Geborgenheit erreicht. ",
   "an11.16:6.1": "Dann meditiert ein Mönch, indem er eine Himmelsrichtung mit einem Herzen voller Liebe durchdringt, und die zweite und die dritte und die vierte. Ebenso nach oben, nach unten, dazwischen, überall und ringsumher; die ganze Welt durchdringt er mit einem Herzen voller Liebe – weit, ausgedehnt, grenzenlos, frei von Feindschaft und bösem Willen. ",
   "an11.16:6.2": "Dann denkt die Person: ",
   "an11.16:6.3": "‚Selbst diese Erlösung des Herzens durch Liebe kommt durch Entscheidungen und Absichten zustande.‘ ",
