Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an11/an11.16_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an11/an11.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.16_translation-de-sabbamitta.json
@@ -34,7 +34,7 @@
   "an11.16:6.4": "Sie versteht: ‚Aber was durch Entscheidungen und Absichten zustande kommt, ist unbeständig und muss aufhören.‘ ",
   "an11.16:6.5": "Indem sie darin verweilt, erreicht sie die Auflösung der Befleckungen. ",
   "an11.16:6.6": "Wenn sie nicht die Auflösung der Befleckungen erreicht, wird sie mit dem Auflösen der fünf niederen Fesseln aufgrund ihrer Leidenschaft und Liebe zu dieser Meditation durch unmittelbares Erscheinen wiedergeboren. Sie erlischt dort und muss von jener Welt nicht zurückkehren. ",
-  "an11.16:6.7": "Auch das ist ein Ding, das vom Gesegneten, der weiß und sieht, dem Vollendeten, dem vollkommen erwachten Buddha richtig erklärt wurde … ",
+  "an11.16:6.7": "Auch das ist ein Ding, das vom Gesegneten, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha richtig erklärt wurde … ",
   "an11.16:7.1": "Dann meditiert eine Nonne, indem sie eine Himmelsrichtung mit einem Herzen voller Mitgefühl durchdringt … ",
   "an11.16:7.2": "Sie meditiert, indem sie eine Himmelsrichtung mit einem Herzen voller freudiger Anteilnahme durchdringt … ",
   "an11.16:7.3": "Sie meditiert, indem sie eine Himmelsrichtung mit einem Herzen voller Gleichmut durchdringt, und die zweite und die dritte und die vierte. ",
